# codemarp

./: .gitignore  README.md  main.py  pyproject.toml
out2/: high_level.mmd  mid_level.json  mid_level.mmd
out3/: mid_level.json
samples/codemarp_full_out/: high_level.mmd  mid_level.json  mid_level.mmd
samples/codemarp_low_out/: graph.json  high_level.mmd  low_level.json  low_level.mmd
samples/codemarp_trace_out/: low_level.json  low_level.mmd  mid_level.json  mid_level.mmd
src/codemap/: errors.py
src/codemap/analyzers/: high_level.py  low_level.py  mid_level.py
src/codemap/cli/: main.py
src/codemap/exporters/: json_exporter.py  mermaid.py
src/codemap/graph/: builder.py  models.py
src/codemap/parser/: js_parser.py  python_parser.py
src/codemap/pipeline/: apply_view.py  build_bundle.py  export_all.py
src/codemap/views/: module_view.py  subgraph.py  trace.py
src/codemarp/: contracts.py  errors.py  viewer.py
src/codemarp/analyzers/: high_level.py  low_level.py  mid_level.py
src/codemarp/cli/: main.py
src/codemarp/exporters/: mermaid.py  (+1 more)
tests/: test_cli_mode_validation.py  test_cli_smoke.py  test_cli_view_validation.py  test_export_graph_json.py  test_high_level.py  test_low_level_cfg.py  test_low_level_export.py  test_low_level_lookup.py  test_mid_level_resolution.py  test_module_mode.py  test_module_view.py  test_parser_contracts.py  test_phase1_smoke.py  test_pipeline.py  test_python_parser.py  test_reverse_trace.py  test_trace.py  test_tree_sitter_python_parser.py
tests/python/: test_low_level_cfg.py  test_low_level_export.py
tests/typescript/: test_calls.py  test_exports.py  test_functions.py  test_imports.py  test_tree_sitter_typescript_parser.py
(+29 files in other folders)
