[project]
name = "codemarp"
version = "0.1.3"
description = "Multi-level code architecture and relationship mapping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codemarp = "codemarp.cli.main:main"
