[project]
name = "codemarp"
version = "0.3.2"
description = "CLI for generating multi-level code architecture graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codemarp = "codemarp.cli.main:main"
